--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	
 </body>
 	<script type="text/javascript" src="constant.js"></script>
-    <script type="text/javascript" src="oto.js"></script>
-     <script type="text/javascript" src="tram.js"></script>
+    <script type="text/javascript" src="car.js"></script>
+     <script type="text/javascript" src="station.js"></script>
      
     <script type="text/javascript" src="meo.js"></script>
     <script type="text/javascript" src="start.js"></script>
